--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,27 @@
 body{
     margin:0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #323534;
+    background-color:#1a2420;
+}
+.main-container{
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: space-between;
 }
 .login-box {
-    width: 100%;
+    width: 50%;
     max-width: 400px;
-    margin: 100px auto;
     padding: 20px;
     background-color: #1e292798;
     border-radius: 25px;
-    box-shadow: 0 2px 10px rgba(253, 207, 0, 0.452);
+    border-width: 1px;
+    border-color: #ffcc00;
+    border-style:inset;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10%;
 }
 .logh2{
     text-align: center;
@@ -86,7 +97,8 @@ p {
     justify-content: space-between;
     align-items: center;
     padding: 20px 30px;
-    background-color: #1e2927;
+    background-color: #0b2016;
+    border-bottom: 0.5px solid #ffcc002f;
 }
 .nav-button{
     background-color: #ffcc00;
@@ -95,7 +107,7 @@ p {
     padding: 10px 20px;
     border-radius: 25px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1em;
+    font-size: 12px;
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
@@ -106,4 +118,11 @@ p {
 }
 .nav-button:active{
     transform: scale(0.95);
+}
+.Image_log{
+    flex: 1;
+    background: url('LOG_side.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
 }
