--- a/Task Master/src/styles/Home.css
+++ b/Task Master/src/styles/Home.css
@@ -12,6 +12,7 @@ body{
     border-bottom: 0.5px solid #ffcc002f;
 }
 .nav-button{
+    margin: 10px;
     background-color: #ffcc00;
     color: #1e2927;
     border: none;
@@ -30,62 +31,73 @@ body{
 .nav-button:active{
     transform: scale(0.95);
 }
-footer{
-    background-color: #0b2016;
-    color: #ffcc00;
-    padding: 20px;
-    text-align: center;
+.logo img{
+  width: 200px;
+  height: auto;
+  max-width: 100%;
 }
-p{
-    color: azure;
+footer{
+  background-color: #0b2016;
+  color: #ffcc00;
+  padding: 20px;
+  text-align: center;
 }
 footer .footer-content{
-    max-width: 1200px;
-    margin: 0 auto;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 footer .social-links {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  footer .social-links li {
-    display: inline;
-    margin-right: 10px;
-  }
-  
-  footer .social-links a {
-    color:#ffcc00;
-    text-decoration: none;
-  }
-  
-  footer .social-links a:hover {
-    text-decoration: underline;
-    cursor: pointer;
-  }
+  list-style-type: none;
+  padding: 0;
+}
+
+footer .social-links li {
+  display: inline;
+  margin-right: 10px;
+}
+
+footer .social-links a {
+  color:#ffcc00;
+  text-decoration: none;
+}
+
+footer .social-links a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
   .task-container{
     padding: 20px;
-    color: azure;
+    color: rgb(245, 255, 240);
   }
   .task-input{
+    width: 100%;
     margin-bottom: 20px;
     text-align: center;
   }
   .task-input input,
 .task-input select {
-    margin: 5px;
+    width: 20%;
+    margin: 10px;
     padding: 15px;
     font-size: 14px;
     border-radius: 25px;
     border: 1px solid #ccc;
 }
-#add-task-btn{
+#add-task-btn {
     background-color: #ffcc00;
     color: #1e2927;
     border: none;
-    padding: 10px 20px;
+    padding: 12px 20px;
     border-radius: 25px;
     cursor: pointer;
-}
+    font-size: 14px;
+    transition: all 0.3s ease;
+    width: auto;
+  }
+  #add-task-btn:hover{
+    background-color: #1e2927;
+    color: #ffcc00;
+  }
 .task-columns{
     display:flex;
     justify-content: space-around;
